--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,7 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,git,node
+# Supabase
+**/supabase/.branches
+**/supabase/.temp
+**/supabase/.env
