--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.30.2",
+    "@tailwindcss/forms": "^0.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2"
   }
