--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^1.30.2",
     "@tailwindcss/forms": "^0.4.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "neo4j-driver": "^4.4.2"
   }
 }
