--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.23"
   },
