--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "neo4j-driver": "^4.4.3"
+    "neo4j-driver": "^4.4.3",
+    "node-vibrant": "^3.2.1-alpha.1"
   }
 }
