--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.30.2",
     "@tailwindcss/forms": "^0.4.0",
-    "@themesberg/tailwind-datepicker": "^1.1.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "neo4j-driver": "^4.4.5",
     "node-vibrant": "^3.2.1-alpha.1",
-    "sib-api-v3-sdk": "^8.3.0"
+    "sib-api-v3-sdk": "^8.3.0",
+    "stripe": "^8.218.0"
   }
 }
