--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "neo4j-driver": "^4.4.5",
     "node-vibrant": "^3.2.1-alpha.1",
     "sib-api-v3-sdk": "^8.3.0",
+    "socket.io": "^4.5.0",
     "stripe": "^8.218.0"
   }
 }
