--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "flowbite": "^1.4.5",
     "neo4j-driver": "^4.4.5",
     "node-vibrant": "^3.2.1-alpha.1",
     "sib-api-v3-sdk": "^8.3.0",
