--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "yume-website",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "nodemon app.js",
-    "start": "node app.js",
+    "test": "nodemon index.js",
+    "start": "node index.js",
     "buildCSS": "npx tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch",
     "stripeDev": "stripe listen --forward-to localhost:7001/stripe_webhooks"
   },
